--- a/HT_20/main/templates/main/layout.html
+++ b/HT_20/main/templates/main/layout.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'main/img/favicon.ico' %}" />
+    <script src="{% static 'main/js/hide_message_block.js' %}"></script>
     <title>
         {% block title %}
         {% endblock %}
